# UGC-Model

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
benchmarks/: conversation_prompt_set_v1.json  determinism_baseline_2026-05-28_iter300.json
docs/: DISTRIBUTED_WAVE_MEDIUM_EXECUTION_MODEL.md  FORMAL_FINDING_DECIMAL_SEMANTICS.md  RELEASE_DISCIPLINE.md  TECHNICAL_REFERENCE.md  UGC_INTELLECT_STAGED_PLAN.md
docs/benchmarks/: parallel-acceleration-report.json  parallel-acceleration-report.md
docs/demo/: cli-demo.md  dirac-annihilation-dynamics.json  dirac-mode-threshold-sweep-bias-families.csv  dirac-mode-threshold-sweep-bias-families.json  dirac-mode-threshold-sweep-bias-families.md  dirac-mode-threshold-sweep-low-grade.csv  dirac-mode-threshold-sweep-low-grade.json  dirac-mode-threshold-sweep-low-grade.md  dirac-mode-threshold-sweep-profile-impedance-f46-54-step1.csv  dirac-mode-threshold-sweep-profiles.csv  (+19 more)
scripts/: benchmark-parallel-acceleration.py  build-ult-lexicon.py  conversation-benchmark.sh  eval-ugc-deutsch-jozsa-probe.py  eval-ugc-deutsch-probe.py  eval-ugc-grover-probe.py  eval-ugc-simon-probe.py  eval-ult-lexicon-coverage.py  eval-ult-reasoning-algebra.py  run-dirac-threshold-sweep.py  run-ugc-grover-scaling-rust.py  run-ugc-grover-scaling.py  run-ugc-quantum-suite.py  run-ult-lexicon-regression.py  run-ult-reasoning-regression.py  score-ugc-symbolic-benchmark.sh
src/: main.rs  quantum_suite.rs
tests/: cli_roundtrip.rs  layer0_cli.rs  quantum_register_cli.rs
(+30 files in other folders)
